classDiagram
    class IWorker {
        <<interface>>
        +start()* void
        +stop()* void
        +isRunning()* bool
    }

    class IEventBus {
        <<interface>>
        +subscribe(string topic, function handler) int
        +unsubscribe(int token) void
        +publish(string topic, void* data) void
    }

    class SensorWorker {
        -bus_: shared_ptr~IEventBus~
        -eventCount_: atomic~int~
        +run(atomic~bool~& running) void
        +eventCount() int
    }

    class WorkerThread~T~ {
        -worker_: shared_ptr~T~
        -thread_: thread
        -running_: atomic~bool~
        +start() void
        +stop() void
        +isRunning() bool
    }

    class EventBus {
        -subscribers_: map
        -mutex_: mutex
        +subscribe(...) int
        +unsubscribe(...) void
        +publish(...) void
    }

    class DataProcessingService {
        -bus_: shared_ptr~IEventBus~
        -processedCount_: atomic~int~
        +processedCount() int
        +lastValue() double
    }

    class QtWorkerAdapter {
        <<QObject>>
        -worker_: shared_ptr~IWorker~
        +startWorker() void
        +stopWorker() void
        +workerStateChanged(bool running) <<signal>>
    }

    class QtEventBusAdapter {
        <<QObject>>
        -bus_: shared_ptr~IEventBus~
        +sensorValueChanged(double) <<signal>>
        +alarmChanged(bool) <<signal>>
        +categoryChanged(QString) <<signal>>
    }

    class MainWindow {
        <<QMainWindow>>
        +onSensorValue(double) <<slot>>
        +onAlarmChanged(bool) <<slot>>
        +onWorkerStateChanged(bool) <<slot>>
        +startRequested() <<signal>>
        +stopRequested() <<signal>>
    }

    class SensorData {
        <<struct>>
        +value: double
        +timestamp_ms: uint64_t
        +channel: uint8_t
        +label: string
    }

    WorkerThread --|> IWorker : implements
    EventBus --|> IEventBus : implements
    SensorWorker --> IEventBus : uses
    WorkerThread o-- SensorWorker : manages
    DataProcessingService o-- IEventBus : uses
    QtWorkerAdapter o-- IWorker : wraps
    QtEventBusAdapter o-- IEventBus : wraps
    MainWindow ..> QtWorkerAdapter : signals/slots
    MainWindow ..> QtEventBusAdapter : signals/slots
    DataProcessingService ..> SensorData : processes
    SensorWorker ..> SensorData : produces
